Welcome_Screen & Main_Menu init

--- a/loligochi/loligochi-app/loligochi-app.csproj
+++ b/loligochi/loligochi-app/loligochi-app.csproj
@@ -10,14 +10,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="icon.png" />
     <None Remove="normal.png" />
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="icon.png" />
     <Resource Include="normal.png" />
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="src\images\icon.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="src\images\lux\normal.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
