Main Menu update

--- a/loligochi/loligochi-app/loligochi-app.csproj
+++ b/loligochi/loligochi-app/loligochi-app.csproj
@@ -13,26 +13,53 @@
     <None Remove="background.jpg_large" />
     <None Remove="background.webp" />
     <None Remove="brand_lux.png" />
+    <None Remove="button_holder.png" />
+    <None Remove="button_holder_circle.png" />
     <None Remove="icon.png" />
+    <None Remove="src\images\assets\background.jpg_large" />
+    <None Remove="src\images\assets\brand_lux.png" />
+    <None Remove="src\images\assets\button.png" />
+    <None Remove="src\images\assets\button_holder.png" />
+    <None Remove="src\images\assets\button_holder_circle.png" />
+    <None Remove="src\images\assets\button_holder_main.png" />
+    <None Remove="src\images\assets\button_hovered.png" />
+    <None Remove="src\images\assets\icon.png" />
   </ItemGroup>
 
   <ItemGroup>
     <Resource Include="background.jpg_large" />
     <Resource Include="background.webp" />
     <Resource Include="brand_lux.png" />
+    <Resource Include="button_holder.png" />
+    <Resource Include="button_holder_circle.png" />
     <Resource Include="icon.png" />
+    <Resource Include="src\images\assets\background.jpg_large">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="src\images\assets\brand_lux.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="src\images\assets\button.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="src\images\assets\button_holder.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="src\images\assets\button_holder_circle.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="src\images\assets\button_holder_main.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="src\images\assets\button_hovered.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="src\images\assets\icon.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="src\images\assets\background.jpg_large">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="src\images\assets\brand_lux.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="src\images\assets\icon.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
     <None Update="src\images\lux\normal.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
