--- a/loligochi/loligochi-app/loligochi-app.csproj
+++ b/loligochi/loligochi-app/loligochi-app.csproj
@@ -51,6 +51,9 @@
     <None Update="src\images\lux\normal.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="src\sounds\assets\background_music.mp3">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="src\sounds\assets\welcome-to-summoners-rift.mp3">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
